--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   </head>
 
-  <body>
+  <body style='background-image: url("")'>
     <header>
       <nav class="navbar navbar-inverse">
         <div class="container">
@@ -57,6 +57,7 @@
     <% end %>
 
     <%= yield %>
+    
   </body>
   
    <!-- Bootstrap core JavaScript
