--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   </head>
 
-  <body style='background-image: url("")'>
+  <body>
     <header>
       <nav class="navbar navbar-inverse">
         <div class="container">
@@ -48,16 +48,17 @@
       </nav>
     </header>
 
-    <% flash.each do |name, message| %>
-      <div class="alert alert-<%= name %> alert-dismissible" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span></button>
-        <%= message.html_safe %>
-      </div>
-    <% end %>
+    <div class="container">
+      <% flash.each do |name, message| %>
+        <div class="alert alert-<%= name %> alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span></button>
+          <%= message.html_safe %>
+        </div>
+      <% end %>
 
-    <%= yield %>
-    
+      <%= yield %>
+    </div>
   </body>
   
    <!-- Bootstrap core JavaScript
