revised styling for page content and copy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,9 @@
         </div>
       <% end %>
 
-      <%= yield %>
+      <div class="entry-containers">
+        <%= yield %>
+      </div>
     </div>
 
     <img class="img-responsive" style="position:absolute; opacity:0.7; top:10px;" src="https://s3.amazonaws.com/defined-perception/images/CAM_0610.JPG">
