--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,9 +1,10 @@
 .entry-containers {
   z-index:20; 
   position:relative; 
-  background-color:rgba(255,255,255, 0.7); 
+  background-color:rgba(255,255,255, 0.8); 
   padding:20px;
   margin-top:50px;
+  box-shadow: 10px 10px 30px -10px #000;
 }
 
 .entry-containers p, .entry-containers li {
