added github link

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <br>
 <% if current_user %>
   <h3>Hello User!</h3>
-  <p>This website was designed to host Defined Perception songs so band members and fans can have access to DP music. However, as an open source project, this website can become much more than that...</p>
+  <p>This website was designed to host Defined Perception songs so band members and fans can have access to DP music. However, as an <a href="https://github.com/paulyk1983/defined-perception">open source project</a>, this website can become much more than that...</p>
   <p>To start off, though, check out Defined Perception's one and only <a href="/tracks">studio album</a>. (More tracks to come soon!)</p>
   <h3>Pipeline</h3>
   <ul>
