--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -73,7 +73,12 @@
       </div>
     </div>
 
-    <img class="img-responsive" style="position:absolute; opacity:0.7; top:10px;" src="https://s3.amazonaws.com/defined-perception/images/CAM_0610.JPG">
+    <img class="img-responsive hidden-xs" style="position:absolute; opacity:0.7; top:10px;" src="https://s3.amazonaws.com/defined-perception/images/CAM_0610.JPG">
+    <!--<img class="img-responsive hidden-sm hidden-md hidden-lg" style="position:absolute; opacity:0.7; top:10px;" src="https://s3.amazonaws.com/defined-perception/images/cave-night.JPG">-->
+    <div class="hidden-sm hidden-md hidden-lg"  style="position:absolute; opacity:0.7; top:10px;">
+    <img class="img-responsive" src="https://s3.amazonaws.com/defined-perception/images/Boobys+6-2-6+048.jpg">
+    <img class="img-responsive" src="https://s3.amazonaws.com/defined-perception/images/Boobys+6-2-6+048.jpg">
+    </div>
   </body>
   
    <!-- Bootstrap core JavaScript
